Implement name update of node and application in API.
