# api/application.pb.go
@@ -55,7 +55,7 @@ func (*CreateApplicationResponse) Descriptor() ([]byte, []int) { return fileDesc
 
 type GetApplicationRequest struct {
 	// name of the application
-	Name string `protobuf:"bytes,1,opt,name=name" json:"name,omitempty"`
+	ApplicationName string `protobuf:"bytes,1,opt,name=applicationName" json:"applicationName,omitempty"`
 }
 
 func (m *GetApplicationRequest) Reset()                    { *m = GetApplicationRequest{} }
@@ -63,9 +63,9 @@ func (m *GetApplicationRequest) String() string            { return proto.Compac
 func (*GetApplicationRequest) ProtoMessage()               {}
 func (*GetApplicationRequest) Descriptor() ([]byte, []int) { return fileDescriptor5, []int{2} }
 
-func (m *GetApplicationRequest) GetName() string {
+func (m *GetApplicationRequest) GetApplicationName() string {
 	if m != nil {
-		return m.Name
+		return m.ApplicationName
 	}
 	return ""
 }
@@ -97,8 +97,10 @@ func (m *GetApplicationResponse) GetDescription() string {
 }
 
 type UpdateApplicationRequest struct {
-	// name of the application (to be updated)
-	Name string `protobuf:"bytes,1,opt,name=name" json:"name,omitempty"`
+	// name of the application to update
+	ApplicationName string `protobuf:"bytes,1,opt,name=applicationName" json:"applicationName,omitempty"`
+	// new name of the application (e.g. in case the application has been renamed)
+	Name string `protobuf:"bytes,3,opt,name=name" json:"name,omitempty"`
 	// description of the application
 	Description string `protobuf:"bytes,2,opt,name=description" json:"description,omitempty"`
 }
@@ -107,6 +109,13 @@ func (m *UpdateApplicationRequest) Reset()                    { *m = UpdateAppli
 func (m *UpdateApplicationRequest) String() string            { return proto.CompactTextString(m) }
 func (*UpdateApplicationRequest) ProtoMessage()               {}
 func (*UpdateApplicationRequest) Descriptor() ([]byte, []int) { return fileDescriptor5, []int{4} }
+
+func (m *UpdateApplicationRequest) GetApplicationName() string {
+	if m != nil {
+		return m.ApplicationName
+	}
+	return ""
+}
 
 func (m *UpdateApplicationRequest) GetName() string {
 	if m != nil {
@@ -131,8 +140,8 @@ func (*UpdateApplicationResponse) ProtoMessage()               {}
 func (*UpdateApplicationResponse) Descriptor() ([]byte, []int) { return fileDescriptor5, []int{5} }
 
 type DeleteApplicationRequest struct {
-	// name of the application
-	Name string `protobuf:"bytes,1,opt,name=name" json:"name,omitempty"`
+	// name of the application to delete
+	ApplicationName string `protobuf:"bytes,1,opt,name=applicationName" json:"applicationName,omitempty"`
 }
 
 func (m *DeleteApplicationRequest) Reset()                    { *m = DeleteApplicationRequest{} }
@@ -140,9 +149,9 @@ func (m *DeleteApplicationRequest) String() string            { return proto.Com
 func (*DeleteApplicationRequest) ProtoMessage()               {}
 func (*DeleteApplicationRequest) Descriptor() ([]byte, []int) { return fileDescriptor5, []int{6} }
 
-func (m *DeleteApplicationRequest) GetName() string {
+func (m *DeleteApplicationRequest) GetApplicationName() string {
 	if m != nil {
-		return m.Name
+		return m.ApplicationName
 	}
 	return ""
 }
@@ -433,31 +442,33 @@ var _Application_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("application.proto", fileDescriptor5) }
 
 var fileDescriptor5 = []byte{
-	// 411 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x09, 0x6e, 0x88, 0x02, 0xff, 0xac, 0x54, 0x4d, 0x4b, 0x2b, 0x31,
-	0x14, 0xa5, 0x9d, 0xbe, 0x81, 0x77, 0xbb, 0x6a, 0xde, 0x73, 0x9c, 0x4e, 0x3f, 0x28, 0xe3, 0xa6,
-	0x54, 0x98, 0x42, 0xbb, 0x73, 0x27, 0x15, 0xbb, 0x11, 0x29, 0x03, 0xee, 0x5c, 0x18, 0xdb, 0xb4,
-	0x04, 0xa6, 0x93, 0x38, 0x49, 0x57, 0xe2, 0xc6, 0xbd, 0x2b, 0x7f, 0x9a, 0x7f, 0xc1, 0x1f, 0x22,
-	0x93, 0x44, 0x5a, 0x6c, 0x22, 0x45, 0xdc, 0x4d, 0x72, 0x4f, 0xce, 0xb9, 0xe7, 0xde, 0xc3, 0x40,
-	0x03, 0x73, 0x9e, 0xd1, 0x39, 0x96, 0x94, 0xe5, 0x09, 0x2f, 0x98, 0x64, 0xc8, 0xc3, 0x9c, 0x46,
-	0xed, 0x15, 0x63, 0xab, 0x8c, 0x0c, 0x31, 0xa7, 0x43, 0x9c, 0xe7, 0x4c, 0x2a, 0x84, 0xd0, 0x90,
-	0x78, 0x06, 0xe1, 0xa4, 0x20, 0x58, 0x92, 0xf3, 0xed, 0xeb, 0x94, 0x3c, 0x6c, 0x88, 0x90, 0x08,
-	0x41, 0x2d, 0xc7, 0x6b, 0x12, 0x56, 0x7a, 0x95, 0xfe, 0xdf, 0x54, 0x7d, 0xa3, 0x1e, 0xd4, 0x17,
-	0x44, 0xcc, 0x0b, 0xca, 0x4b, 0x64, 0x58, 0x55, 0xa5, 0xdd, 0xab, 0xb8, 0x05, 0x4d, 0x0b, 0xa3,
-	0xe0, 0x2c, 0x17, 0x24, 0x3e, 0x85, 0xa3, 0x29, 0x91, 0x87, 0x69, 0xc5, 0xd7, 0x10, 0x7c, 0x05,
-	0x6b, 0x9a, 0x1f, 0x76, 0x36, 0x83, 0xf0, 0x86, 0x2f, 0x7e, 0xd9, 0xab, 0x85, 0xd1, 0x78, 0x4d,
-	0x20, 0xbc, 0x20, 0x19, 0x39, 0x54, 0xae, 0x24, 0xb3, 0xe0, 0x0d, 0xd9, 0x25, 0x04, 0x57, 0x54,
-	0xd8, 0x26, 0xf7, 0x1f, 0xfe, 0x64, 0x74, 0x4d, 0xa5, 0xe2, 0xf2, 0x52, 0x7d, 0x40, 0x01, 0xf8,
-	0x6c, 0xb9, 0x14, 0x44, 0xaa, 0xb6, 0xbd, 0xd4, 0x9c, 0xe2, 0x1c, 0x8e, 0xf7, 0x78, 0xcc, 0x50,
-	0xbb, 0x00, 0x92, 0x49, 0x9c, 0x4d, 0xd8, 0x26, 0xff, 0x64, 0xdb, 0xb9, 0x41, 0x63, 0xf0, 0x0b,
-	0x22, 0x36, 0x59, 0x49, 0xe9, 0xf5, 0xeb, 0xa3, 0x56, 0x82, 0x39, 0x4d, 0xec, 0x1b, 0x4a, 0x0d,
-	0x74, 0xf4, 0x52, 0x83, 0xfa, 0x4e, 0x1d, 0x11, 0xf0, 0x75, 0x3a, 0x50, 0x47, 0x3d, 0x77, 0x85,
-	0x2f, 0xea, 0xba, 0xca, 0x66, 0x20, 0xed, 0xe7, 0xb7, 0xf7, 0xd7, 0x6a, 0x10, 0x37, 0x74, 0xb0,
-	0xb7, 0x08, 0x71, 0x56, 0x19, 0xa0, 0x3b, 0xf0, 0xa6, 0x44, 0xa2, 0xc8, 0xda, 0xa2, 0x16, 0xf8,
-	0xae, 0xfd, 0xb8, 0xa7, 0xd8, 0x23, 0x14, 0xee, 0xb1, 0x0f, 0x1f, 0xcb, 0x65, 0x3d, 0xa1, 0x0c,
-	0x7c, 0xbd, 0x7a, 0x63, 0xc4, 0x95, 0x2c, 0x63, 0xc4, 0x1d, 0x93, 0x13, 0x25, 0xd5, 0x89, 0x9c,
-	0x52, 0xa5, 0x1f, 0x0a, 0xbe, 0xce, 0x86, 0x51, 0x73, 0x05, 0xcb, 0xa8, 0xb9, 0x73, 0x64, 0x8c,
-	0x0d, 0xdc, 0xc6, 0x6e, 0xa1, 0x56, 0x26, 0x04, 0xe9, 0xf9, 0xd8, 0x43, 0x17, 0xb5, 0xed, 0x45,
-	0x23, 0xd2, 0x54, 0x22, 0xff, 0xd0, 0xfe, 0x6e, 0xee, 0x7d, 0xf5, 0xdb, 0x19, 0x7f, 0x04, 0x00,
-	0x00, 0xff, 0xff, 0x57, 0x22, 0x45, 0xcd, 0xae, 0x04, 0x00, 0x00,
+	// 437 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x09, 0x6e, 0x88, 0x02, 0xff, 0xa4, 0x94, 0xdf, 0x6e, 0xda, 0x30,
+	0x14, 0xc6, 0x05, 0x61, 0x91, 0x76, 0xb8, 0x98, 0xf0, 0xb6, 0x2c, 0x04, 0x86, 0x50, 0xa6, 0x49,
+	0x11, 0x93, 0x82, 0x04, 0x77, 0xbb, 0x43, 0xa0, 0x71, 0x33, 0xa1, 0x29, 0xd2, 0xee, 0x76, 0xe3,
+	0x81, 0x41, 0xd6, 0x42, 0xec, 0xc5, 0x46, 0x95, 0x5a, 0xf5, 0xa6, 0xaf, 0xd0, 0xf7, 0xe8, 0xcb,
+	0xf4, 0x15, 0xfa, 0x20, 0x55, 0x6c, 0xb7, 0x44, 0xe0, 0x54, 0xb4, 0xbd, 0xc3, 0x3e, 0xc7, 0xdf,
+	0xef, 0xfc, 0xf9, 0x08, 0xb4, 0x30, 0xe7, 0x29, 0x5d, 0x62, 0x49, 0x59, 0x16, 0xf3, 0x9c, 0x49,
+	0x86, 0x1c, 0xcc, 0x69, 0xd0, 0xdd, 0x30, 0xb6, 0x49, 0xc9, 0x10, 0x73, 0x3a, 0xc4, 0x59, 0xc6,
+	0xa4, 0xca, 0x10, 0x3a, 0x25, 0xfc, 0x05, 0xfe, 0x34, 0x27, 0x58, 0x92, 0xc9, 0xfe, 0x75, 0x42,
+	0xfe, 0xef, 0x88, 0x90, 0x08, 0x41, 0x23, 0xc3, 0x5b, 0xe2, 0xd7, 0xfa, 0xb5, 0xe8, 0x6d, 0xa2,
+	0x7e, 0xa3, 0x3e, 0x34, 0x57, 0x44, 0x2c, 0x73, 0xca, 0x8b, 0x4c, 0xbf, 0xae, 0x42, 0xe5, 0xab,
+	0xb0, 0x03, 0x6d, 0x8b, 0xa2, 0xe0, 0x2c, 0x13, 0x24, 0x9c, 0xc0, 0xc7, 0x39, 0x91, 0x16, 0x56,
+	0x04, 0xef, 0x4a, 0xf5, 0x2f, 0xf6, 0xd8, 0xc3, 0xeb, 0x70, 0x01, 0xde, 0xa1, 0x84, 0x16, 0x7f,
+	0x61, 0xbd, 0xe7, 0xe0, 0xff, 0xe6, 0x2b, 0xfb, 0x04, 0x4e, 0xae, 0xea, 0x91, 0xed, 0x3c, 0x77,
+	0x56, 0x16, 0xb6, 0x99, 0xd5, 0x0c, 0xfc, 0x19, 0x49, 0xc9, 0xeb, 0x0a, 0x2b, 0x10, 0x16, 0x15,
+	0x83, 0xf8, 0x01, 0xde, 0x4f, 0x2a, 0x6c, 0xfb, 0xf8, 0x00, 0x6f, 0x52, 0xba, 0xa5, 0x52, 0xc9,
+	0x3a, 0x89, 0x3e, 0x20, 0x0f, 0x5c, 0xb6, 0x5e, 0x0b, 0x22, 0x55, 0x33, 0x4e, 0x62, 0x4e, 0x61,
+	0x06, 0x9f, 0x8e, 0x74, 0xcc, 0x52, 0x7a, 0x00, 0x92, 0x49, 0x9c, 0x4e, 0xd9, 0x2e, 0x7b, 0x50,
+	0x2b, 0xdd, 0xa0, 0x31, 0xb8, 0x39, 0x11, 0xbb, 0xb4, 0x90, 0x74, 0xa2, 0xe6, 0xa8, 0x13, 0x63,
+	0x4e, 0x63, 0xfb, 0x86, 0x13, 0x93, 0x3a, 0xba, 0x69, 0x40, 0xb3, 0x14, 0x47, 0x04, 0x5c, 0xed,
+	0x39, 0xf4, 0x59, 0x3d, 0xaf, 0xb2, 0x74, 0xd0, 0xab, 0x0a, 0x9b, 0x81, 0x74, 0xaf, 0x6e, 0xef,
+	0xae, 0xeb, 0x5e, 0xd8, 0xd2, 0x7f, 0x97, 0x7d, 0x86, 0xf8, 0x5e, 0x1b, 0xa0, 0x7f, 0xe0, 0xcc,
+	0x89, 0x44, 0x81, 0xb5, 0x44, 0x0d, 0x78, 0xaa, 0xfc, 0xf0, 0x9b, 0x52, 0xff, 0x8a, 0xbe, 0x1c,
+	0xa9, 0x0f, 0x2f, 0x0e, 0xf6, 0x76, 0x89, 0xce, 0xc0, 0xd5, 0xde, 0x30, 0x3d, 0x55, 0x99, 0xd4,
+	0xf4, 0x54, 0xed, 0xa3, 0x58, 0x51, 0xa3, 0xe0, 0x14, 0x6a, 0xd1, 0xa5, 0x04, 0x57, 0x3b, 0xc6,
+	0x80, 0xab, 0x4c, 0x68, 0xc0, 0xd5, 0xee, 0x32, 0xed, 0x0e, 0x4e, 0x6a, 0xf7, 0x0f, 0x34, 0x0a,
+	0x0b, 0x21, 0x3d, 0x40, 0xbb, 0x2b, 0x83, 0xae, 0x3d, 0x68, 0x78, 0x6d, 0xc5, 0x7b, 0x8f, 0x8e,
+	0x97, 0xf7, 0xd7, 0x55, 0x5f, 0xbb, 0xf1, 0x7d, 0x00, 0x00, 0x00, 0xff, 0xff, 0x97, 0x71, 0x86,
+	0x98, 0x25, 0x05, 0x00, 0x00,
 }
