# api/node.pb.gw.go
@@ -80,12 +80,12 @@ func request_Node_Get_0(ctx context.Context, marshaler runtime.Marshaler, client
 		return nil, metadata, err
 	}
 
-	val, ok = pathParams["name"]
+	val, ok = pathParams["nodeName"]
 	if !ok {
-		return nil, metadata, grpc.Errorf(codes.InvalidArgument, "missing parameter %s", "name")
+		return nil, metadata, grpc.Errorf(codes.InvalidArgument, "missing parameter %s", "nodeName")
 	}
 
-	protoReq.Name, err = runtime.String(val)
+	protoReq.NodeName, err = runtime.String(val)
 
 	if err != nil {
 		return nil, metadata, err
@@ -118,12 +118,12 @@ func request_Node_Delete_0(ctx context.Context, marshaler runtime.Marshaler, cli
 		return nil, metadata, err
 	}
 
-	val, ok = pathParams["name"]
+	val, ok = pathParams["nodeName"]
 	if !ok {
-		return nil, metadata, grpc.Errorf(codes.InvalidArgument, "missing parameter %s", "name")
+		return nil, metadata, grpc.Errorf(codes.InvalidArgument, "missing parameter %s", "nodeName")
 	}
 
-	protoReq.Name, err = runtime.String(val)
+	protoReq.NodeName, err = runtime.String(val)
 
 	if err != nil {
 		return nil, metadata, err
@@ -195,12 +195,12 @@ func request_Node_Update_0(ctx context.Context, marshaler runtime.Marshaler, cli
 		return nil, metadata, err
 	}
 
-	val, ok = pathParams["name"]
+	val, ok = pathParams["nodeName"]
 	if !ok {
-		return nil, metadata, grpc.Errorf(codes.InvalidArgument, "missing parameter %s", "name")
+		return nil, metadata, grpc.Errorf(codes.InvalidArgument, "missing parameter %s", "nodeName")
 	}
 
-	protoReq.Name, err = runtime.String(val)
+	protoReq.NodeName, err = runtime.String(val)
 
 	if err != nil {
 		return nil, metadata, err
@@ -387,13 +387,13 @@ func RegisterNodeHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.
 var (
 	pattern_Node_Create_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"api", "applications", "applicationName", "nodes"}, ""))
 
-	pattern_Node_Get_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3, 1, 0, 4, 1, 5, 4}, []string{"api", "applications", "applicationName", "nodes", "name"}, ""))
+	pattern_Node_Get_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3, 1, 0, 4, 1, 5, 4}, []string{"api", "applications", "applicationName", "nodes", "nodeName"}, ""))
 
-	pattern_Node_Delete_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3, 1, 0, 4, 1, 5, 4}, []string{"api", "applications", "applicationName", "nodes", "name"}, ""))
+	pattern_Node_Delete_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3, 1, 0, 4, 1, 5, 4}, []string{"api", "applications", "applicationName", "nodes", "nodeName"}, ""))
 
 	pattern_Node_List_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"api", "applications", "applicationName", "nodes"}, ""))
 
-	pattern_Node_Update_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3, 1, 0, 4, 1, 5, 4}, []string{"api", "applications", "applicationName", "nodes", "name"}, ""))
+	pattern_Node_Update_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3, 1, 0, 4, 1, 5, 4}, []string{"api", "applications", "applicationName", "nodes", "nodeName"}, ""))
 )
 
 var (
